# extemporaneous

./: .travis.yml  Cargo.toml  README.md  run-cheddar.rs  search-index.js
aho_corasick/: struct.Matches.html  struct.MatchesOverlapping.html  struct.StreamMatches.html  struct.StreamMatchesOverlapping.html
bit_set/: index.html  struct.BitSet.html  struct.Difference.html  struct.Intersection.html  struct.Iter.html  struct.SymmetricDifference.html  struct.Union.html
bit_vec/: struct.Blocks.html  struct.IntoIter.html  struct.Iter.html
extemp/: enum.Action.html  enum.Error.html  enum.Event.html  index.html  sidebar-items.js  struct.Automaton.html  struct.State.html  struct.Transition.html  struct.extemp_automaton.html  type.Mask.html  type.Result.html  type.StateID.html  type.TransitionMap.html  type.Value.html
libc/: constant.ABDAY_1.html  constant.ABDAY_2.html  constant.ABDAY_3.html  constant.ABDAY_4.html  constant.ABDAY_5.html  constant.ABDAY_6.html  constant.ABDAY_7.html  constant.ABMON_1.html  constant.ABMON_10.html  constant.ABMON_11.html  constant.ABMON_12.html  constant.ABMON_2.html  constant.ABMON_3.html  constant.ABMON_4.html  constant.ABMON_5.html  constant.ABMON_6.html  constant.ABMON_7.html  constant.ABMON_8.html  constant.ABMON_9.html  constant.AF_INET.html  constant.AF_INET6.html  constant.AF_UNIX.html  constant.ALTMON_1.html  constant.ALTMON_10.html  constant.ALTMON_11.html  constant.ALTMON_12.html  constant.ALTMON_2.html  constant.ALTMON_3.html  constant.ALTMON_4.html  constant.ALTMON_5.html  constant.ALTMON_6.html  constant.ALTMON_7.html  (+740 more)
src/: dot.rs  (+3 more)
(+96 files in other folders)
